--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,9 +41,8 @@ if (location.href.match(/localhost/)) {
     </div>
     <div class="post-content">
       <div id="disqus_thread"></div>
-      <script type="text/javascript" src="http://disqus.com/forums/myabc/embed.js"></script>
-      <noscript><a href="http://myabc.disqus.com/?url=ref">View the discussion thread.</a></noscript>
-      <!--    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a> -->
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
     </div>
     <div class="wrap-post">
       &nbsp;
@@ -55,16 +54,11 @@ if (location.href.match(/localhost/)) {
 </section>
 
 <script type="text/javascript">
-//<![CDATA[
-(function() {
- var links = document.getElementsByTagName('a');
- var query = '?';
- for(var i = 0; i < links.length; i++) {
- if(links[i].href.indexOf('#disqus_thread') >= 0) {
-  query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
- }
- }
- document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/myabc/get_num_replies.js' + query + '"></' + 'script>');
-})();
-//]]>
+  var disqus_shortname = 'myabc';
+
+  (function() {
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
 </script>
